# boundary-ai

./: .dockerignore  .gitignore  ARCHITECTURE.MD  PLAN.md  README.md  docker-compose.deploy.yml  docker-compose.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/src/armoriq_api/: __init__.py  agent.py  audit.py  config.py  db.py  llm.py  main.py  mcp_manager.py  models.py  policy.py  realtime.py  schemas.py  types.py
api/tests/: test_agent_runtime.py  test_planner.py  test_policy.py  test_realtime.py
deploy/: .env.example  Caddyfile
docs/: DEMO.md
mcp_server/: README.md  pyproject.toml
mcp_server/src/armoriq_mcp/: __init__.py  probe.py  server.py  workspace.py
mcp_server/tests/: test_workspace.py
web/: Dockerfile  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx
web/app/approvals/: page.tsx
web/app/chat/: page.tsx
web/app/logs/: page.tsx
web/app/mcp-servers/: page.tsx
web/app/policies/: page.tsx
web/components/: dashboard-shell.tsx
web/lib/: api.ts  types.ts  use-live-refresh.ts
